# biped-control-lib

./: .travis.yml  README.md
choreonoid/cnoid/: JAXON_RED_standard.cnoid
choreonoid/rtc/ArmInverseKinematicsTest/: ArmInverseKinematicsTest.cpp  ArmInverseKinematicsTest.h  Kinematics.cpp  Kinematics.h
choreonoid/rtc/COMJacobian/: CMakeLists.txt  COMJacobian.h  rtc.conf
choreonoid/simple_controller/: CMakeLists.txt
choreonoid/simple_controller/PDController/: CMakeLists.txt  PDController.cpp
src/com_jacobian/: CMakeLists.txt  com_jacobian_cnoid.cpp
src/kinematics/: CMakeCache.txt  CMakeLists.txt  Jacobian.cpp  Kinematics.cpp  Kinematics.h  Link.cpp  Makefile  cmake_install.cmake  demoKinematicsGL  main.cpp  testKinematics  testKinematics.cpp
src/patten/PreviewController/: CMakeLists.txt
src/patten/ZMPError_PreviewController/: CMakeLists.txt
src/planning/FootPlanner/: CMakeLists.txt
src/planning/FootStepPlanner/: CMakeLists.txt
src/planning/PlanZMPList/: CMakeLists.txt
src/sample/gait_pattern_sample/: CMakeLists.txt
src/sample/kinematics_demo/: CMakeLists.txt
src/swing_trajectory/: CMakeLists.txt  FootStepPlanner.cpp  FootStepPlanner.h  GaitPatternGenerator.cpp  GaitPatternGenerator.h  PlanCommon.h  PreviewControl.cpp  PreviewControl.h  main.cpp
src/util/: CMakeLists.txt
